apps/temporal/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: temporal-local-auth
  namespace: temporal
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-temporal-redirect-https@kubernetescrd
    traefik.ingress.kubernetes.io/router.priority: "100"
spec:
  ingressClassName: traefik
  rules:
    - host: temporal.rubase.shanginn.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: temporal-local-auth
                port:
                  number: 8080
  tls:
    - secretName: temporal-tls
      hosts:
        - temporal.rubase.shanginn.io
