apps/temporal/routing.yaml
apiVersion: v1
kind: Service
metadata:
  name: temporal-authenticated-frontend
  namespace: temporal
  labels:
    app.kubernetes.io/name: temporal
    app.kubernetes.io/instance: temporal
    app.kubernetes.io/component: authenticated-frontend
    app.kubernetes.io/part-of: temporal
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: temporal
    app.kubernetes.io/instance: temporal
    app.kubernetes.io/component: frontend
  ports:
    - name: grpc-rpc
      port: 7233
      targetPort: rpc
      appProtocol: tcp
      protocol: TCP
    - name: http
      port: 7243
      targetPort: http
      appProtocol: http
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: temporal-authenticated-frontend
  namespace: temporal
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: temporal
      app.kubernetes.io/instance: temporal
      app.kubernetes.io/component: frontend
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: temporal
      ports:
        - port: 6933
          protocol: TCP
        - port: 7233
          protocol: TCP
        - port: 7243
          protocol: TCP
        - port: 9090
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: temporal-web
  namespace: temporal
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: temporal
      app.kubernetes.io/instance: temporal
      app.kubernetes.io/component: web
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: temporal-local-auth
      ports:
        - port: 8080
          protocol: TCP
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - port: 8080
          protocol: TCP
